# LocalAI-Agent

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  verify_project.py
scripts/: index_documents.py 
src/ai_agent/: __init__.py   main.py
src/ai_agent/agents/: README.md  __init__.py  rag_agent.py
src/ai_agent/api/: __init__.py
src/ai_agent/core/: README.md  __init__.py  vector_store.py
src/ai_agent/rag/: README.md  __init__.py  text_splitter.py
src/ai_agent/tools/: __init__.py
src/ai_agent/utils/: __init__.py  helpers.py  logger.py  timing.py
