[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "Local AI development environment with RAG, Ollama, and Python agents. Offline LLMs, document ingestion, vector search, and extensible OpenWebUI interface."
authors = ["tauimonen <tauimonen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.14.8"
langchain = "^1.1.0"
langchain-community = "^0.4.1"
chromadb = "^1.3.5"
lancedb = "^0.25.3"
requests = "^2.32.5"
httpx = "^0.28.1"
websocket-client = "^1.9.0"
beautifulsoup4 = "^4.14.2"
pymupdf = "^1.26.6"
pdfplumber = "^0.11.8"
markdown-it-py = "^4.0.0"
sentence-transformers = "^5.1.2"
tiktoken = "^0.12.0"
uvicorn = "^0.38.0"
fastapi = "^0.122.0"
python-dotenv = "^1.2.1"
pydantic = "^2.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
