[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-ai-agent"
version = "0.1.0"
description = "Local AI Agent with RAG, Ollama, and Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "rag", "ollama", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core LLM & RAG
    "llama-index>=0.10.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    
    # Vector Databases
    "chromadb>=0.4.22",
    "lancedb>=0.5.0",
    
    # Embeddings & Tokenization
    "sentence-transformers>=2.3.0",
    "tiktoken>=0.6.0",
    
    # Document Processing
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "markdown-it-py>=3.0.0",
    "python-docx>=1.1.0",
    
    # HTTP & APIs
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
    
    # Backend Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",  # For file uploads
    
    # Configuration & Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Utilities
    "tenacity>=8.2.0",  # Retry logic
    "rich>=13.7.0",     # Beautiful terminal output
    "loguru>=0.7.2",    # Better logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
ai-agent = "ai_agent.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/local-ai-agent"
Documentation = "https://github.com/yourusername/local-ai-agent#readme"
Repository = "https://github.com/yourusername/local-ai-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

# Ruff configuration (replaces flake8, isort, etc.)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=src/ai_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "lancedb.*",
    "llama_index.*",
    "langchain.*",
]
ignore_missing_imports = true